# Concurrency

./: .gitignore
Assignment 1/: CHANGELOG.md  README.md  iban-calculator.cabal
Assignment 1/src/: Ioref.hs  Main.hi  Main.hs  Mvar.hs
Assignment 2/: README.md  lijn.bat  netchange.cabal  test copy.bat  test.bat
Assignment 2/src/: Main.hs  NetwerkFunctions.hs  Structure.hs  netwerk functies.hs  oud-main.hs
Assignment 3/src/: Oefening.hs  Quickhull.hs
